Latex etwas angepasst

--- a/tex/test.tex
+++ b/tex/test.tex
@@ -287,5 +287,11 @@
         \label{RT-Folge}
     \end{figure}
 
+    \subsection{Datenpfadarchitektur}
+
+    Aus der Registertransferfolge habe ich erkennen können, dass diese Schaltung 12 Busse benötigt.
+    Diese habe ich von A bis L benannt.
+
+    % Erste Version einfügen
 
 \end{document}
